styles/danmaku.css
@keyframes sr-fly {
  from { transform: translateX(0); }
  to   { transform: translateX(calc(-100% - var(--sr-travel, 800px))); }
}

.sr-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  overflow: hidden;
  z-index: 9999;
  background: transparent !important;
  border: none !important;
  box-shadow: none !important;
}

.sr-danmaku {
  position: absolute;
  left: 100%;
  right: auto;
  white-space: nowrap;
  font-family: 'Noto Sans TC', 'Microsoft JhengHei', sans-serif;
  font-weight: bold;
  text-shadow:
    -1px -1px 0 #000,
     1px -1px 0 #000,
    -1px  1px 0 #000,
     1px  1px 0 #000;
  animation-name: sr-fly;
  animation-timing-function: linear;
  animation-fill-mode: forwards;
  line-height: 1;
  user-select: none;
}

.sr-emote {
  vertical-align: middle;
  margin: 0 1px;
}

